--- a/committee/apo.html
+++ b/committee/apo.html
@@ -82,6 +82,7 @@
             <a href="#" class="sixth kalliope">
                 <img src="../profiles/kalliope_outline.png"/> 
                 <h2>Kalliope Zervass</h2>
+                <h3> Administrator </h3>
                 <p>
                     Kalliope Zervas is a 3rd year Chemical Biology major from Sacramento, California. Kalliope has always aspired to help those in need, participating in a variety of extracurricular activities to do so, including being in the midst of starting her own non-profit giving medical supplies to countries in need. Kalliope also participates in STEM research and she hopes to help other STEM students, who would otherwise be disadvantaged, get involved in similar academic opportunities . After Cal, she hopes to one day become a Trauma Surgeon in the Doctors Without Borders program and/or work in politics in order to help reform the US healthcare system. In her free time, she loves to paint, dance, and play with her dogs!
 
@@ -92,6 +93,7 @@
             <a href="#" class="sixth jacob"> 
                 <img src="../profiles/jacob_outline.png"/> 
                 <h2>Jacob Williams</h2>
+                <h3> Administrator </h3>
                 <p>
                     Jacob Williams is a first-year studying MCB Neurobiology and Cognitive Science, currently serving as the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. As a Bay Area native, Jacob attended Oakland School for the Arts before becoming a Shelby Davis Scholar and representing the United States at the United World College in Mostar, Bosnia and Herzegovina where he completed the IB Diploma before coming to Cal. Abroad, Jacob found his passion for public justice while volunteering in a post-war conflict zone as well as an underlying theme of academic study in STEM which aided his ability to positively impact lives within the local community and the Balkan region. At Cal, Jacob hopes to bring his passion for STEM to his studies in Pre-Med and eventually pursue Medical School. In his free time, he likes to travel, dance, have deep-conversations about the randomest topics, and explore the unknown. </p> 
             </a>
@@ -99,6 +101,7 @@
             <a href="#" class="sixth isha">
                 <img src="../profiles/isha_outline.png"/> 
                 <h2>Isha Shah</h2> 
+                <h3> Administrator </h3>
                 <p>
                     Isha Shah is the Pre-Med Academic and Professional Opportunities Administrator for the ASUC Office of Chaka Tellem. She is a junior majoring in Bioengineering, with a minor in Public Policy and Design Innovation, and is originally from Toronto, Canada. Isha’s passion to provide equitable education stems from her involvement as a Special Needs Education Tutor and Youth Empowerment Activist in highschool. After graduation, she wants to pursue medicine, while integrating healthcare and technology to provide accessible patient care to low income and underserved populations. Within the Berkeley Community, she is also a Campus Ambassador, Undergraduate Researcher at UCSF Medicine and part of the Society of Women Engineers.
 
@@ -108,6 +111,7 @@
             <a href="#" class="sixth alfonse">
                 <img src="../profiles/alfonse_outline.png"/> 
                 <h2>Alfonse Dalcour</h2>
+                <h3> Administrator </h3>
                 <p>
                     [INCORRECT]Cyn Gomez is a Legislative Associate for the ASUC Office of Chaka Tellem. They are a freshman currently intending to major in Social Welfare with a double minor in Public Policy and Spanish. Their goal is to create systematic change that uplifts underrepresented communities and fights alongside others for representation. After undergrad, Cyn wants to attend law school and practice civil rights law to protect and advocate for those who have been wronged by a system that should be built to protect everyone. They love to read, take naps, and embroider in their freetime, among going for runs and working out to destress. In their free time, you can catch Cyn planning for their next week or studying for any and every class![INCORRECT]
                 </p> <!-- need bio and photo -->
@@ -433,10 +437,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
+        padding: 2vw;
+        padding-top: 1vw;
         padding-right: 2vw;
-        padding-left: 2vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .kalliope h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .kalliope p { 
@@ -476,10 +496,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
+        padding: 2vw;
+        padding-top: 1vw;
         padding-right: 3vw;
-        padding-left: 3vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .jacob h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .jacob p { 
@@ -519,10 +555,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
-        padding-right: 3vw;
-        padding-left: 3vw;
+        padding: 2vw;
+        padding-top: 1vw;
+        padding-right: 4vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .isha h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .isha p { 
@@ -562,10 +614,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
+        padding: 2vw;
+        padding-top: 1vw;
         padding-right: 3vw;
-        padding-left: 3vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .alfonse h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .alfonse p { 
