--- a/committee/cc.html
+++ b/committee/cc.html
@@ -82,6 +82,7 @@
         <div class="administrators">
             <a href="#" class="sixth jay">
                 <h2>Jay Kim</h2>
+                <h3>Administrator</h3>
                 <img src="cc/Jay Kim No Background.png"/> 
                 
                 <p>
@@ -423,9 +424,9 @@
         align-content: center;
         border-radius: 0%;
         margin-top: 10px;
-        margin-bottom: 200px;
+        margin-bottom: 20vw;
         width: 55%;
-        left: 23%;
+        left: 15%;
         
     }
 
@@ -466,10 +467,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
+        padding: 2vw;
+        padding-top: .5vw;
         padding-right: 4vw;
-        padding-left: 4vw;
+        padding-left: 2vw;
         background-color: #48667E;
+    }
+
+    .jay h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4.75vw;
+        left: 2vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .65em;
+        color: white;
+        text-align: center;
     }
 
     .jay p {
@@ -516,7 +533,7 @@
 
     .NanaAma p { 
         margin: 50px;
-        padding-top: 820px;
+        padding-top: 45vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
