--- a/committee/ej.html
+++ b/committee/ej.html
@@ -79,7 +79,8 @@
         <div class="administrators">
             <a href="#" class="sixth kaylee"> 
                 <img src="../profiles/kaylee_outline.png"/> 
-                <h2>Kaylee Hernandez</h2> 
+                <h2>Kaylee Hernandez</h2>
+                <h3> Administrator </h3> 
                 <p>
                 Kaylee Hernandez is an Environmental Justice Administrator for Senator Tellem. She is a sophomore studying Molecular and Cell Biology with an emphasis in Genetics. Kaylee wants to help educate her communities on the actions they can take to reduce their carbon footprint while also demanding that corporations make their practices more eco-friendly. She’s passionate about education and uplifting underrepresented communities. As a Los Angeles native, she loves to spend time outdoors and exploring nature since there isn’t enough of it in LA. She also loves to play a variety of sports, read classic books, and watch baking shows.
                 </p> 
@@ -88,6 +89,7 @@
             <a href="#" class="sixth sydney"> 
                 <img src="../profiles/sydney_outline.png"/> 
                 <h2>Sydney Starvos</h2> 
+                <h3> Administrator </h3>
                 <p>
                  Sydney Stavros is a sophomore from Jacksonville, Florida intending to study Political Science and Business Administration, and works as an Environmental Justice Administrator  in the ASUC Office of Chaka Tellem. She is the Sustainability Chair for Chi Omega and volunteers with Matriculate, mentoring high school students through the college application process. She is passionate about sustainability, environmental justice, attempting to mitigate climate change and spreading awareness about these issues. In her free time she loves going to the beach, reading, making art, hiking, buying plants, and exploring the Bay Area with friends.
                 </p> 
@@ -96,6 +98,7 @@
             <a href="#" class="sixth george"> 
                 <img src="../profiles/george_outline.png"/> 
                 <h2>George Cai</h2> 
+                <h3> Administrator </h3>
                 <p>
                 George is an environmental justice administrator for Chaka’s ASUC office. He is a freshman that's intending a business major with a minor in cognitive science. He is also involved in the Cal Marching Band, the RCSA, and is planning to join an intramural flag football team. He is from Palo Alto California and loves video games, music, and football. He is passionate about the environment and has done many volunteer opportunities in his community.
                 </p> 
@@ -410,7 +413,7 @@
     .kaylee h2 {
         position: absolute;
         padding-bottom: 0px;
-        top: 2vw;
+        top: 1vw;
         left: 0;
         margin: 0px;
         display: inline;
@@ -420,15 +423,31 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 0vw;
-        padding-right: 5vw;
-        padding-left: 5vw;
+        padding: 2vw;
+        padding-top: 1vw;
+        padding-right: 3vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .kaylee h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .kaylee p {
         margin: 50px;
-        padding-top: 40vw;
+        padding-top: 45vw;
         padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
@@ -465,10 +484,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
+        padding: 2vw;
+        padding-top: 1vw;
         padding-right: 3vw;
-        padding-left: 3vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .sydney h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .sydney p { 
@@ -508,10 +543,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
-        padding-right: 3vw;
-        padding-left: 3vw;
+        padding: 2vw;
+        padding-top: 1vw;
+        padding-right: 4vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .george h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .george p { 
