--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -82,6 +82,7 @@
             <a href="#" class="sixth issabella">
                 <img src="../profiles/issabella_outline.png"/> 
                 <h2>Issabella Romo</h2>
+                <h3> Associate </h3>
                 <p>
                     Issabella Romo is a freshman majoring in Legal Studies and minoring in Human Rights. She joined the Legislative Committee in pursuing her passion for creating positive, lasting change through policies. Supporting the Latinx community on campus is a priority for Issabella, and she hopes to contribute to initiatives that create more long-term resources and opportunities for them. She enjoys playing the flute and walking her dog, Oliver (a wire fox terrier) in her free time. Her favorite artists are Ariana Grande and Dua Lipa although she also is a Tchaikovsky enthusiast.
 
@@ -91,6 +92,7 @@
             <a href="#" class="sixth anallely">
                 <img src="../profiles/anallely_outline.png"/> 
                 <h2>Anallely Martin</h2> 
+                <h3> Associate </h3>
                 <p>
                     Anallely is a Legislative Associate for Senator Chaka Tellem’s Legislative Committee. She is an intended Political Economy major and hopes to minor in Public Policy as well. Anallely is extremely passionate about representing marginalized communities and contributing to long lasting change that addresses the inequities faced by underrepresented communities. She hopes to pursue policy work and possibly attend Law school in the future. She is from Palm Springs, CA which is in SoCal. Her hobbies consist of exploring new places in the Bay, hiking, walking her dog (who she’s had since she was 7) and spending days at the beach.
 
@@ -100,6 +102,7 @@
             <a href="#" class="sixth jalen"> 
                 <img src="../profiles/jalen_outline.png"/> 
                 <h2>Jalen Johnson</h2>
+                <h3> Associate </h3>
                 <p>
                     Jalen is a second year studying Political Science. He is from Sacramento, CA and is a Legislative Associate for the legislative committee for Senator Tellem’s office. Jalen is also involved with other on campus activities such as Cal Dems, Cal ACLU and Cal United Nations. Jalen is very passionate about education and political advocacy amongst the youth. His favorite hobbies are playing videogames, watching tv, and traveling. After Cal, Jalen hopes to go to law school or become a high school or college level teacher/professor.
 
@@ -109,6 +112,7 @@
             <a href="#" class="sixth cyn"> 
                 <img src="leg/cyngomez.png"/> 
                 <h2>Cyn Gomez</h2>
+                <h3> Associate </h3>
                 <p>
                     Cyn Gomez is a Legislative Associate for the ASUC Office of Chaka Tellem. They are a freshman currently intending to major in Social Welfare with a double minor in Public Policy and Spanish. Their goal is to create systematic change that uplifts underrepresented communities and fights alongside others for representation. After undergrad, Cyn wants to attend law school and practice civil rights law to protect and advocate for those who have been wronged by a system that should be built to protect everyone. They love to read, take naps, and embroider in their freetime, among going for runs and working out to destress. In their free time, you can catch Cyn planning for their next week or studying for any and every class!
                 </p> 
@@ -392,7 +396,7 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 20vw;
+        margin-bottom: 15vw;
         width: 60%;
         left: 15%;
         
@@ -435,10 +439,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
-        padding-right: 2vw;
-        padding-left: 2vw;
+        padding: 2vw;
+        padding-top: 1vw;
+        padding-right: 3vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .issabella h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .issabella p { 
@@ -478,10 +498,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
-        padding-right: 2vw;
-        padding-left: 2vw;
+        padding: 2vw;
+        padding-top: 1vw;
+        padding-right: 3vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .anallely h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .anallely p { 
@@ -521,10 +557,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
-        padding-right: 2vw;
-        padding-left: 2vw;
+        padding: 2vw;
+        padding-top: 1vw;
+        padding-right: 4vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .jalen h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .jalen p { 
@@ -563,10 +615,26 @@
         font-size: .9em;
         color: white;
         text-align: center;
-        padding: 30px;
-        padding-right: 2vw;
-        padding-left: 2vw;
+        padding: 2vw;
+        padding-top: 1vw;
+        padding-right: 5vw;
+        padding-left: 1vw;
         background-color: #48667E;
+    }
+
+    .cyn h3 {
+        position: absolute;
+        padding-bottom: 0px;
+        top: 4vw;
+        left: 1vw;
+        margin: 0px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: .7em;
+        color: white;
+        text-align: center;
     }
 
     .cyn p { 
