--- a/committee/cc.html
+++ b/committee/cc.html
@@ -65,7 +65,7 @@
 
     <div id="second-section">
         <div class="inner">
-            <img src="cc/alexandra-photo.JPG" align="LEFT" class="imgresponsive"/> 
+            <img src="cc/alexandra-photo.png" align="LEFT" class="imgresponsive"/> 
             <div class="bordertext">
                 <h1>Alexandra Morales</h1>
                 <h2>Department Executive</h2><p style="font-size:1.5vw;">Alexandra is a first-generation college student in her second year at UC Berkeley. She is currently majoring in Urban Studies and minoring in Global Poverty and Practice. Her dreams are to pursue a career in urban planning and work with marginalized countries to receive equity in resources and tools, specifically in the Global South. Her passions for urban planning stem from the love she has for her <i>comunidad</i>, Barrio Logan. She is the Campus Climate Administrator for ASUC Senator Chaka Tellem’s office. Through this, she aspires to amplify the voices of underrepresented students on campus and foster a community that is diverse, inclusive, and feels supported. In her free time she loves going to México (only a few mins away from her city), going to the beach, and enjoys reading and writing poetry.</p>
