--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -300,6 +300,8 @@
       padding-left: 5vw;
       width: 30%;
       height: auto;
+      /*background-color: #070F2E; /* background square on chair photo 
+      background-clip: content-box; */
     }
 
     #second-section .inner {
@@ -396,9 +398,9 @@
         align-content: center;
         border-radius: 10%;
         margin-top: 10px;
-        margin-bottom: 15vw;
-        width: 60%;
-        left: 15%;
+        margin-bottom: 20vw;
+        width: 45%;
+        left: 25%;
         
     }
 
@@ -423,7 +425,7 @@
         padding-top: 7vw;
         padding-bottom: 0px;
         padding-right: 1vw;
-        padding-left: 7vw;
+        padding-left: 5vw;
     }
 
     .issabella h2 {
@@ -464,7 +466,7 @@
     .issabella p { 
         margin: 50px;
         padding-top: 40vw;
-        padding-left: 8vw;
+        padding-left: 6vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
@@ -482,7 +484,7 @@
         padding-top: 3vw;
         padding-bottom: 0px;
         padding-right: 1vw;
-        padding-left: 6vw;
+        padding-left: 4vw;
     }
 
     .anallely h2 {
@@ -523,7 +525,7 @@
     .anallely p { 
         margin: 50px;
         padding-top: 40vw;
-        padding-left: 8vw;
+        padding-left: 6vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
@@ -541,7 +543,7 @@
         padding-top: 7vw;
         padding-bottom: 0px;
         padding-right: 1vw;
-        padding-left: 7vw;
+        padding-left: 5vw;
     }
 
     .jalen h2 {
@@ -582,7 +584,7 @@
     .jalen p { 
         margin: 50px;
         padding-top: 35vw;
-        padding-left: 8vw;
+        padding-left: 6vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
@@ -599,7 +601,7 @@
         padding-top: 4vw;
         padding-bottom: 0px;
         padding-right: 1vw;
-        padding-left: 7vw;
+        padding-left: 4vw;
     }
 
     .cyn h2 {
@@ -640,7 +642,7 @@
     .cyn p { 
         margin: 50px;
         padding-top: 40vw;
-        padding-left: 8vw;
+        padding-left: 5vw;
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
