--- a/committee/legislative.html
+++ b/committee/legislative.html
@@ -54,10 +54,16 @@
             <h1>
                 Legislative
             </h1>
-            <p>
-            The Legislative Committee enacts Senator Tellem’s policy platforms -- including but not limited to Academic and Professional Opportunities, Campus Climate, Environmental Justice, Community Engagement and Diversity -- to create substantive change on behalf of the Berkeley community, ensuring their representation, success, and collectiving flourishing.
-            </p>
+            
         </div>
+    </div>
+
+
+    <div id="mission-section">
+        <h1> Our Mission </h1>
+        <p>
+            The Legislative Committee enacts Senator Tellem’s policy platforms -- including but not limited to Academic and Professional Opportunities, Campus Climate, Environmental Justice, Community Engagement and Diversity -- to create substantive change on behalf of the Berkeley community, ensuring their representation, success, and collectiving flourishing.
+        </p>
     </div>
 
     <div id="second-section">
@@ -230,18 +236,7 @@
       color: white;
     }
 
-    #first-section p {
-        position: relative;
-        left: 16vw;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 400;
-        width: 70vw;
-        font-style: normal;
-        font-size: 1.75vw;
-        color: white;
-        padding-bottom: 50px;
-        z-index: 10;
-    }
+    
     #first-section h1 {
         position: relative;
         margin: 0 auto;
@@ -249,21 +244,55 @@
         font-family: rig-solid-medium-outline, sans-serif;
         color: #8d6e63;
         font-size: 4.75vw;
-        padding: 10px 0;
+        padding: 80px 0;
         z-index: 10;
     }
 
     .logoresponsive {
         position: absolute;
         top: -1vw;
-        left: 38vw;
+        left: 40vw;
         padding: 10px;
         padding-right: 0px;
-        width: 25%;
+        width: 18%;
         height: auto;
-        opacity: 0.25;
+        opacity: 0.2;
         z-index: -1;
+    }
 
+
+    #mission-section h1 {
+        margin: 10px;
+        top: 3vw;
+        left: 7vw;
+        position: relative;
+        max-width: calc(100% - 40px);
+        width: calc(100% - 40px);
+        display: inline;
+        font-family: montserrat, sans-serif;
+        font-weight: 600;
+        font-style: normal;
+        font-size: 4vw;
+        color: white;
+        text-align: center;
+        padding: 2vw;
+        background-color: #48667E;
+        z-index: 1000;
+    }
+
+    #mission-section p {
+        position: relative;
+        top: 2vw;
+        left: 12vw;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        width: 70vw;
+        font-style: normal;
+        font-size: 2vw;
+        color: white;
+        padding: 4vw;
+        z-index: 10;
+        background-color: #070F2E;
     }
 
 
