--- a/committee/tech.html
+++ b/committee/tech.html
@@ -54,11 +54,16 @@
             <h1>
                 Technology 
             </h1> 
-            <p>
-                The Tech Committee is responsible for being the Office of ASUC Senator Tellem's first point of contact
-                with the greater Berkeley community. They curate and design the graphics and posts for Senator Tellem's social media and online presence.
-            </p> 
+            
         </div>
+    </div>
+
+
+    <div id="mission-section">
+        <h1> Our Mission </h1>
+        <p>
+            The Tech Committee is responsible for being the Office of ASUC Senator Tellem's first point of contact with the greater Berkeley community. They curate and design the graphics and posts for Senator Tellem's social media and online presence.
+        </p>
     </div>
 
     <div id="second-section">
@@ -213,18 +218,7 @@
       color: white;
     }
 
-    #first-section p {
-        position: relative;
-        left: 16vw;
-        font-family: sofia-pro, sans-serif;
-        font-weight: 400;
-        width: 70vw;
-        font-style: normal;
-        font-size: 1.75vw;
-        color: white;
-        padding-bottom: 50px;
-        z-index: 10;
-    }
+    
     #first-section h1 {
         position: relative;
         margin: 0 auto;
@@ -232,21 +226,55 @@
         font-family: rig-solid-medium-outline, sans-serif;
         color: #64b5f6;
         font-size: 4.75vw;
-        padding: 10px 0;
+        padding: 80px 0;
         z-index: 10;
     }
 
     .logoresponsive {
         position: absolute;
-        top: -4vw;
+        top: -2vw;
         left: 38vw;
         padding: 10px;
         padding-right: 0px;
-        width: 25%;
+        width: 20%;
         height: auto;
         opacity: 0.2;
         z-index: -1;
 
+    }
+
+    #mission-section h1 {
+        margin: 10px;
+        top: 3vw;
+        left: 7vw;
+        position: relative;
+        max-width: calc(100% - 40px);
+        width: calc(100% - 40px);
+        display: inline;
+        font-family: montserrat, sans-serif;
+        font-weight: 600;
+        font-style: normal;
+        font-size: 4vw;
+        color: white;
+        text-align: center;
+        padding: 2vw;
+        background-color: #48667E;
+        z-index: 1000;
+    }
+
+    #mission-section p {
+        position: relative;
+        top: 2vw;
+        left: 12vw;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 400;
+        width: 70vw;
+        font-style: normal;
+        font-size: 2vw;
+        color: white;
+        padding: 4vw;
+        z-index: 10;
+        background-color: #070F2E;
     }
 
 
